<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="clear">CLEAR</string>
    <string name="calculator">CALCULATOR</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="Time_must">Time must be greater than zero.</string>
    <string name="Distance">Distance and Time are required.</string>
    <string name="Speed">Speed is over limit!</string>
</resources>